fix formatting & scrollbar issues

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,16 +1,15 @@
 .app {
-  height: 100vh;
-
   .sections {
-    width: 100%;
+    overflow: scroll;
     height: calc(100vh - 100px);
+    width: 100%;
     position: relative;
     top: 100px;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
     scrollbar-width: none; //firefox
     &::-webkit-scrollbar {
-      display: none;
+      width: 0;
     }
 
     > * {
@@ -20,22 +19,3 @@
     }
   }
 }
-
-// .section__title {
-//   margin-bottom: 0.25em;
-// }
-
-// .section__subtitle {
-//   margin: 0;
-//   font-size: var(--fs-h3);
-// }
-
-// .section__title--intro {
-//   font-weight: var(--fw-reg);
-// }
-
-// .section__subtitle--intro,
-// .section__subtitle--about {
-//   background: var(--clr-accent);
-//   font-family: var(--ff-secondary);
-// }
