--- a/src/components/Nav/SideBar.scss
+++ b/src/components/Nav/SideBar.scss
@@ -25,7 +25,6 @@
     font-weight: $fontRegular;
 
     li {
-      overflow: hidden;
       margin-bottom: 20px;
       :hover {
         font-weight: $fontBold;
